# rpi2040-text-editor

./: .gitignore  CMakeLists.txt  Desegni Skizi.layout  README.md  app_globals.cpp  app_globals.hpp  console_video.cpp  console_video.hpp  core_collection.cpp  core_collection.hpp  csa_object.cpp  csa_object.hpp  doc_character.cpp  doc_character.hpp  doc_row.cpp  doc_row.hpp  document.cpp  document.hpp  document_engine.cpp  document_engine.hpp  framebuffer.cpp  framebuffer.hpp  inputbox_engine.cpp  inputbox_engine.hpp  inputbox_keyboard_callback.cpp  inputbox_keyboard_callback.hpp  inputbox_sample_callback.cpp  inputbox_sample_callback.hpp  keyboard_callback.cpp  keyboard_callback.hpp  keyboard_engine.cpp  keyboard_engine.hpp  keyboard_message.cpp  keyboard_message.hpp  lcd4x20_inputbox.cpp  lcd4x20_inputbox.hpp  lcd4x20_menu.cpp  lcd4x20_menu.hpp  lcd4x20_msgbox.cpp  lcd4x20_msgbox.hpp  (+52 more)
core/: about.cpp  about.hpp  about_keyboard_callback.cpp  about_keyboard_callback.hpp  doc_character.cpp  doc_character.hpp  doc_row.cpp  doc_row.hpp  document.cpp  document.hpp  document_engine.cpp  document_engine.hpp  line_zoom.cpp  line_zoom.hpp  line_zoom_keyboard_callback.cpp  line_zoom_keyboard_callback.hpp  main_menu.cpp  main_menu.hpp  main_menu_keyboard_callback.cpp  main_menu_keyboard_callback.hpp  new_file_menu.cpp  new_file_menu.hpp  new_file_menu_keyboard_callback.cpp  new_file_menu_keyboard_callback.hpp  open_file_menu.cpp  open_file_menu.hpp  open_file_menu_keyboard_callback.cpp  open_file_menu_keyboard_callback.hpp  save_as_menu.cpp  save_as_menu.hpp  save_as_menu_keyboard_callback.cpp  save_as_menu_keyboard_callback.hpp  text_persistence_engine.cpp  text_persistence_engine.hpp  text_render_engine.cpp  text_render_engine.hpp  text_render_engine_keyboard_callback.cpp  text_render_engine_keyboard_callback.hpp
document/: doc_character.cpp  doc_character.hpp  doc_row.cpp  doc_row.hpp  document.cpp  document.hpp
engine/: disk_engine.cpp  disk_engine.h  document_engine.cpp  document_engine.hpp  inputbox_engine.cpp  inputbox_engine.hpp  keyboard_engine.cpp  keyboard_engine.hpp  menu_engine.cpp  menu_engine.hpp  msgbox_engine.cpp  msgbox_engine.hpp  splashbox_engine.cpp  splashbox_engine.hpp  text_engine.cpp  text_engine.hpp  text_persistence_engine.cpp  text_persistence_engine.hpp  text_render_engine.cpp  text_render_engine.hpp  textview_engine.cpp  textview_engine.hpp  utils_engine.cpp  utils_engine.hpp  video_engine.cpp  video_engine.hpp  widget_callback.cpp  widget_callback.hpp  widget_engine.cpp  widget_engine.hpp
keyboard/: inputbox_keyboard_callback.cpp  inputbox_keyboard_callback.hpp  keyboard_callback.cpp  keyboard_callback.hpp  keyboard_message.cpp  keyboard_message.hpp  menu_keyboard_callback.cpp  menu_keyboard_callback.hpp  msgbox_keyboard_callback.cpp  msgbox_keyboard_callback.hpp  text_render_engine_keyboard_callback.cpp  text_render_engine_keyboard_callback.hpp  textengine_keyboard_callback.cpp  textengine_keyboard_callback.hpp  textview_keyboard_callback.cpp  textview_keyboard_callback.hpp  winsock_keyboard.cpp  winsock_keyboard.hpp
keyboard_samples/: inputbox_sample_callback.cpp  inputbox_sample_callback.hpp  menu_sample_callback.cpp  menu_sample_callback.hpp  msgbox_sample_callback.cpp  msgbox_sample_callback.hpp
lib/: lfs_disk_engine.cpp  lfs_disk_engine.hpp
lib/littlefs/: lfs.h
rpi2040/: rpi2040_disk_engine.cpp  rpi2040_disk_engine.hpp  rpi2040_lcd4x20_video.cpp  rpi2040_lcd4x20_video.hpp  rpi2040_sdcard_disk_engine.cpp  rpi2040_sdcard_disk_engine.hpp  rpi2040_text_engine.cpp  rpi2040_text_engine.hpp  rpi2040_uart.cpp  rpi2040_uart.hpp  rpi2040_uart_keyboard.cpp  rpi2040_uart_keyboard.hpp  rpi2040_uart_video.cpp  rpi2040_uart_video.hpp  rpi2040_usb_keyboard.cpp  rpi2040_usb_keyboard.hpp  rpi2040_utils_engine.cpp  rpi2040_utils_engine.hpp
rpi2040_sdk/: hid_app.cpp  lcd_1602_i2c.c
utils/: vt100_utils.cpp  vt100_utils.hpp
video/: console_video.cpp  console_video.hpp  framebuffer.cpp  framebuffer.hpp
widgets/: lcd4x20_inputbox.cpp  lcd4x20_inputbox.hpp  lcd4x20_menu.cpp  lcd4x20_menu.hpp  lcd4x20_msgbox.cpp  lcd4x20_msgbox.hpp  lcd4x20_splashbox.cpp  lcd4x20_splashbox.hpp  lcd4x20_textview.cpp  lcd4x20_textview.hpp
